
Wed Dec 27 12:06:43 PST 2000  Earnie Boyd  <earnie@users.sourceforge.net>

	* mingwfaq.shtml: Add a name reference to each item of the index.
	Add a href at the end of each section to go back to the index.  
	Add header tags (h#) to highlight the sections of the FAQ.

Tue Dec 26 13:39:25 PST 2000  Earnie Boyd  <earnie@users.sourceforge.net>

	* ssi/lsidebar.html: Revert previous change
	* ssi/bottombar.html: ditto
	* who.shtml: Instruct user to SF memberlist.php

2000-12-22  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>

	* docs.shtml: Added link to faq.shtml

        * faq.shtml: Barf out installation instructions.

        * lsidebar.shtml, bottombar.shtml: Point "Who are we" link to
        SF project members page.

Fri Dec 22 07:23:46 PST 2000  Earnie Boyd  <earnie@users.sourceforge.net>

	* docs.shtml: bugfix ssi include comment tag.

Fri Dec 22 07:16:51 PST 2000  Earnie Boyd  <earnie@users.sourceforge.net>

	* docs.shtml: oops. Missed the change for ssi. Changed to use ssi.

Mon Dec 18 11:37:39 PST 2000  Earnie Boyd  <earnie@users.sourceforge.net>

	* index.shtml: reformat Paul Sokolovsky's change slightly.
	* links.shtml: revert Paul Sokolovsky's change and reword.
	* faq.shtml: reformat to use ssi.
	* mingwfaq.shtml: ditto.
	* ssi/footer.html: Modify CVS tag.
	* ssi/lsidebar.html: ditto.
	* ssi/bottombar.html: ditto.

Thu Dec 14 17:37:26 PST 2000  Earnie Boyd  <earnie@users.sourceforge.net>

	* history.shtml: Modified to use ssi.
	* index.shtml: ditto.
	* licensing.shtml: ditto.
	* links.shtml: ditto.
	* lists.shtml: ditto.
	* mirrors.shtml: ditto.
	* news.shtml: ditto.
	* ported.shtml: ditto.
	* who.shtml: ditto.
	* x86-win32-ports: ditto.

2000-12-13  Earnie Boyd  <earnie@users.sourceforge.net>

	* mingwfaq.shtml: Revert 1.15 to 1.14 because bottom portion of file
	was missing.  Removed popup add for Laura's web account from bottom of 
	file.

2000-12-12  Paul Sokolovsky  <Paul.Sokolovsky@technologist.com>
