@@ -3,7 +3,8 @@
 <!--			     Footer                                     -->
 <!--                                                                    -->
 
-<p><i><small>
+<p>
+<i><small>
 Please submit bugs and web site problems (bad html, broken links) via
 <a href="http://sourceforge.net/bugs/?func=addbug&group_id=2435">
 online bugtracker form</a>
@@ -16,10 +17,10 @@ Submit news, announcements, additions, and links via
 online patch form</a> (with
 <a href="https://sourceforge.net/account/login.php?return_to=/patch/%3ffunc%3daddpatch%26group_id%3d2435">
 SF login</a>).
-</p>
-<p>
+</small></i></p>
+<p><i><small>
 We are in the process of creating these web pages, so do expect some
 incomplete pages and broken links. We appreciate your patience. 
 </small></i></p>
-<!--$Id: footer.html,v 1.2 2000-12-18 19:44:50 earnie Exp $-->
+<!--$Id: footer.html,v 1.3 2001-01-02 21:14:13 earnie Exp $-->
 
